// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@slicemachine/plugin-react #index it creates an index.js file 1`] = `
"// This file is generated by Slice Machine. Update with care!

export { default as Foo } from './Foo'
export { default as Bar } from './Bar'
export { default as Baz } from './Baz'
"
`;

exports[`@slicemachine/plugin-react #slice 1`] = `
Object {
  "data": "import React from 'react'
import { RichText } from 'prismic-reactjs'
  
const Foo = ({ slice }) => (
  <section>
    <span className=\\"title\\">
      { slice.primary.title ? (
        <RichText render={slice.primary.title} />
      ) : (
        <h2>Template slice, update me!</h2>
      )}
    </span>
      { slice.primary.description ? (
        <RichText render={slice.primary.description}/>
      ) : (
         <p>start by editing this slice from inside Slice Machine!</p>
      )}
      <style jsx>{\`
          section {
            max-width: 600px;
            margin: 4em auto;
            text-align: center;
          }
          .title {
            color: #8592e0;
          }
      \`}</style>
    </section>
  )
  
  export default Foo
",
  "filename": "index.js",
}
`;

exports[`@slicemachine/plugin-react #snippets snippet Boolean with useKey 1`] = `"<span key=\\"bool-\${i}\\" >{ slices[0].data ? 'true' : 'false' }</span>"`;

exports[`@slicemachine/plugin-react #snippets snippet Color with useKey 1`] = `"<span key=\\"color-\${i}\\" style={{ color: slices[1].data }}>Some Text</span>"`;

exports[`@slicemachine/plugin-react #snippets snippet ContentRelationship with useKey 1`] = `
"/* import { Link } from 'prismic-reactjs' */
<a key=\\"slices[2].data-\${i}\\" href={Link.url(slices[2].data)}>My Link</a>"
`;

exports[`@slicemachine/plugin-react #snippets snippet Date with useKey 1`] = `
"/* import { Date as ParseDate } from 'prismic-reactjs' */
<span key=\\"slices[3].data-\${i}\\">{ ParseDate(slices[3].data) }</span>"
`;

exports[`@slicemachine/plugin-react #snippets snippet Embed with useKey 1`] = `
"// you might want to use a lib here (eg. react-oembed-container)
<div key=\\"slices[4].data-\${i}\\" dangerouslySetInnerHTML={{ __html: slices[4].data }} />"
`;

exports[`@slicemachine/plugin-react #snippets snippet GeoPoint with useKey 1`] = `"<span key=\\"slices[5].data-\${i}\\" >{ slices[5].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets snippet Image with useKey 1`] = `"<img src={slices[6].data.url} alt={slices[6].data.alt} key=\\"img-\${i}\\" />"`;

exports[`@slicemachine/plugin-react #snippets snippet Link with useKey 1`] = `
"/* import { Link } from 'prismic-reactjs' */
<a key=\\"slices[7].data-\${i}\\" href={Link.url(slices[7].data)}>My Link</a>"
`;

exports[`@slicemachine/plugin-react #snippets snippet LinkToMedia with useKey 1`] = `
"/* import { Link } from 'prismic-reactjs' */
<a key=\\"slices[8].data-\${i}\\" href={Link.url(slices[8].data)}>My Link</a>"
`;

exports[`@slicemachine/plugin-react #snippets snippet Number with useKey 1`] = `"<span key=\\"slices[9].data-\${i}\\" >{ slices[9].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets snippet Select with useKey 1`] = `"<span key=\\"slices[10].data-\${i}\\" >{ slices[10].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets snippet StructuredText with useKey 1`] = `"<RichText render={slices[11].data} key=\\"rich-text-\${i}\\" />"`;

exports[`@slicemachine/plugin-react #snippets snippet Text with useKey 1`] = `"<span key=\\"slices[12].data-\${i}\\" >{ slices[12].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets snippet Timestamp with useKey 1`] = `"<span key=\\"slices[13].data-\${i}\\" >{ slices[13].data }>/span>"`;

exports[`@slicemachine/plugin-react #snippets snippet UID with useKey 1`] = `"<span>{ slices[14].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets supported type Boolean should be truthy 1`] = `"<span>{ slices[0].data ? 'true' : 'false' }</span>"`;

exports[`@slicemachine/plugin-react #snippets supported type Color should be truthy 1`] = `"<span style={{ color: slices[1].data }}>Some Text</span>"`;

exports[`@slicemachine/plugin-react #snippets supported type ContentRelationship should be truthy 1`] = `
"/* import { Link } from 'prismic-reactjs' */
<a href={Link.url(slices[2].data)}>My Link</a>"
`;

exports[`@slicemachine/plugin-react #snippets supported type Date should be truthy 1`] = `
"/* import { Date as ParseDate } from 'prismic-reactjs' */
<span>{ ParseDate(slices[3].data) }</span>"
`;

exports[`@slicemachine/plugin-react #snippets supported type Embed should be truthy 1`] = `
"// you might want to use a lib here (eg. react-oembed-container)
<div dangerouslySetInnerHTML={{ __html: slices[4].data }} />"
`;

exports[`@slicemachine/plugin-react #snippets supported type GeoPoint should be truthy 1`] = `"<span>{ slices[5].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets supported type Image should be truthy 1`] = `"<img src={slices[6].data.url} alt={slices[6].data.alt} />"`;

exports[`@slicemachine/plugin-react #snippets supported type Link should be truthy 1`] = `
"/* import { Link } from 'prismic-reactjs' */
<a href={Link.url(slices[7].data)}>My Link</a>"
`;

exports[`@slicemachine/plugin-react #snippets supported type LinkToMedia should be truthy 1`] = `
"/* import { Link } from 'prismic-reactjs' */
<a href={Link.url(slices[8].data)}>My Link</a>"
`;

exports[`@slicemachine/plugin-react #snippets supported type Number should be truthy 1`] = `"<span>{ slices[9].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets supported type Select should be truthy 1`] = `"<span>{ slices[10].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets supported type StructuredText should be truthy 1`] = `"<RichText render={slices[11].data}  />"`;

exports[`@slicemachine/plugin-react #snippets supported type Text should be truthy 1`] = `"<span>{ slices[12].data }</span>"`;

exports[`@slicemachine/plugin-react #snippets supported type Timestamp should be truthy 1`] = `"<span>{ slices[13].data }>/span>"`;

exports[`@slicemachine/plugin-react #snippets supported type UID should be truthy 1`] = `"<span>{ slices[14].data }</span>"`;

exports[`@slicemachine/plugin-react #story 1`] = `
Object {
  "data": "import MyComponent from '../slices/foo';
export default { title: 'FooBar' }

export const _DefaultSlice = () => <MyComponent slice={{\\"id\\":\\"default-slice\\",\\"name\\":\\"Default slice\\",\\"docURL\\":\\"...\\",\\"version\\":\\"sktwi1xtmkfgx8626\\",\\"description\\":\\"FooSlice\\",\\"primary\\":{\\"title\\":{\\"type\\":\\"StructuredText\\",\\"config\\":{\\"single\\":\\"heading1\\",\\"label\\":\\"Title\\",\\"placeholder\\":\\"This is where it all begins...\\"}},\\"description\\":{\\"type\\":\\"StructuredText\\",\\"config\\":{\\"single\\":\\"paragraph\\",\\"label\\":\\"Description\\",\\"placeholder\\":\\"A nice description of your feature\\"}},\\"\\":{\\"config\\":{\\"label\\":\\"\\",\\"constraint\\":{},\\"thumbnails\\":[]},\\"type\\":\\"Image\\"}},\\"items\\":{}}} />
_DefaultSlice.storyName = 'Default slice'

",
  "filename": "index.stories.js",
}
`;
